@@ -56,12 +56,25 @@ function initAliasCleanup(Server) {
     }, CLEAN_INTERVAL);
 }
 
+/* Clean out old rate limiters */
+function initIpThrottleCleanup(Server) {
+    setInterval(function () {
+        for (var ip in Server.ipThrottle) {
+            if (Server.ipThrottle[ip].lastTime < Date.now() - 60 * 1000) {
+                delete Server.ipThrottle[ip];
+            }
+        }
+    }, 5 * 60 * 1000);
+}
+
 module.exports = function (Server) {
     if (init === Server) {
         Logger.errlog.log("WARNING: Attempted to re-init background tasks");
         return;
     }
 
+    init = Server;
     initStats(Server);
     initAliasCleanup(Server);
+    initIpThrottleCleanup(Server);
 };
