@@ -56,6 +56,7 @@ var Server = function (cfg) {
     self.ioWeb = null;
     self.ioSecure = null;
     self.ipCount = {};
+    self.ipThrottle = {};
     self.db = null;
     self.api = null;
     self.announcement = null;
@@ -257,10 +258,28 @@ Server.prototype.logHTTP = function (req, status) {
     ].join(" "));
 };
 
+const IP_THROTTLE = {
+    burst: 5,
+    sustained: 0.1
+};
+
 Server.prototype.handleSocketConnection = function (socket) {
     var self = this;
     var ip = self.getSocketIP(socket);
     socket._ip = ip;
+
+    if (!(ip in self.ipThrottle)) {
+        self.ipThrottle[ip] = $util.newRateLimiter();
+    }
+
+    if (self.ipThrottle[ip].throttle(IP_THROTTLE)) {
+        Logger.syslog.log("WARN: IP throttled: " + ip);
+        socket.emit("kick", {
+            reason: "Your IP address is connecting too quickly.  Please "+
+                    "wait 10 seconds before joining again."
+        });
+        return;
+    }
 
     // Check for global ban on the IP
     self.db.isGlobalIPBanned(ip, function (err, banned) {
