@@ -1,3 +1,7 @@
+Mon Oct 14 16:30 2013 CDT
+    * lib/server.js: Rate-limit socket.io connections
+    * lib/bgtask.js: Periodically clear out old rate limiters
+
 Sat Oct 12 19:43 2013 CDT
     * lib/user.js: Fix jumpTo kick bug (and delete)
     * lib/api.js: Fix unloaded channel API listing bug
